Fixed Overflow

--- a/styles.css
+++ b/styles.css
@@ -697,8 +697,19 @@
 }
 
 
+.main__container--2 {
+    background-color: #caa616;
+    height: 100%;
+    margin-top: 50px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
 .sign-up__fields {
-    width: 150%;
+    width: 100%;
     height: 115%;
     color: blue;
     background: blue;
@@ -706,10 +717,7 @@
     border-radius: 5px;
     justify-content: center;
     align-items: center;
-    display: grid;
-    grid-template-columns: 1fr;
-    align-content: center;
-    
+
 }
 
 
